--- a/routeTest.html
+++ b/routeTest.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
     <title></title>
     <script src="angular.js"></script>
+    <script src="angular-route.js"></script>
 </head>
 <body>
 
 <h1>Mail</h1>
 
-<div ng></div>
+<div ng-view></div>
+<script>
+   var messages = [{
+        id: 0, sender: 'jean@somecompany.com', subject: 'Hi there, old friend',
+        date: 'Dec 7, 2013 12:32:00', recipients: ['greg@somecompany.com'],
+        message: 'Hey, we should get together for lunch sometime and catch up.'
+        +'There are many things we should collaborate on this year.'
+    }, {
+        id: 1,  sender: 'maria@somecompany.com',
+        subject: 'Where did you leave my laptop?',
+        date: 'Dec 7, 2013 8:15:12', recipients: ['greg@somecompany.com'],
+        message: 'I thought you were going to put it in my desk drawer.'
+        +'But it does not seem to be there.'
+    }, {
+        id: 2, sender: 'bill@somecompany.com', subject: 'Lost python',
+        date: 'Dec 6, 2013 20:35:02', recipients: ['greg@somecompany.com'],
+        message: 'Nobody panic, but my pet python is missing from her cage.'
+        +'She doesn\'t move too fast, so just call me if you see her.'
+    } ];
+    var app = angular.module("myApp", ["ngRoute"]);
+    app.config(function($routeProvider){
+        $routeProvider.when('/',{templateUrl:'list.html',controller:function($scope){
+            $scope.messages = messages;
+        }}).when('/view/:id',{templateUrl:'detail.html',controller:function($scope,$routeParams){
+            $scope.message = messages[$routeParams.id];
+        }});
+    });
+   function list($scope){
+       $scope.messages = messages;
+   }
+  /* app.controller("list",function($scope){
+    });*/
+
+</script>
 </body>
 </html>
