--- a/Test.html
+++ b/Test.html
@@ -38,9 +38,32 @@
 </div>
 <hr/>
 <h1>Filter</h1>
+
 <div ng-controller="filterrr">
     {{filtertest |upCase:'是在下输了' }}
 </div>
+
+<!--<div ng-controller="directive">-->
+    <!--<span ng>qqqq</span>-->
+
+<!--</div>-->
+
+<hr/>
+<h1>表单验证</h1>
+
+<form name="inputForm" ng-controller="formC">
+    <input type="text" required ng-model="user.first"/>
+    <br/>
+    <input type="text" required ng-model="user.last"/>
+    <br/>
+    <input type="email" required ng-model="user.email"/>
+    <br/>
+    <!--<input type="number" required ng-maxlength="3" ng-min="1" ng-model="user.age"/>-->
+    <br/>
+    <button  ng-disabled="!inputForm.$valid" ng-click="adduser()">afffffffff</button>
+
+</form>
+
 </body>
 <script>
     var app = angular.module("my", []);
@@ -73,15 +96,23 @@
     })
 
     app.filter("upCase", function () {
-        var u = function (input,qq) {
-            return input.toUpperCase()+qq;
+        var u = function (input, qq) {
+            return input.toUpperCase() + qq;
         }
         return u;
     });
 
-    app.controller("filterrr",function($scope){
+    app.controller("filterrr", function ($scope) {
         $scope.filtertest = "rgfjkehu3EFASW32wdr";
     });
+    app.controller("formC",function($scope){
+        //$scope.user={}
+        $scope.adduser = function(){
+            console.info(this.user.first+"@@"+this.user.last);
+        }
+    });
+
+
 
 
 </script>
