--- a/pro.html
+++ b/pro.html
@@ -3,155 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <style>
+
+        #productTypeDiv ul {
+            list-style: none;
+            padding: 0px;
+            background: url("ul-bg.gif") repeat-y 5px 0px;
+        }
+
+        #productTypeDiv li {
+            padding: 5px 0 2px 15px;
+            background: url("tree-ul-li.gif") no-repeat 5px -32px;
+        }
+
+        #productTypeDiv li a {
+            font-size: 12px;
+            cursor: pointer;
+
+        }
+
+        #productTypeDiv ul li em {
+            cursor: pointer;
+            display: inline-block;
+            width: 15px;
+            float: left;
+            height: 15px;
+            margin-left: -14px;
+            background: url("tree-ul-li.gif") no-repeat -32px 2px;
+        }
+
+        #productTypeDiv ul li em.off {
+            background-position: -17px -18px;
+        }
+
+        .end {
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
-<div id="content">
-    <!--<ul>-->
-
-    <!--<li>111</li>-->
-    <!--<li>222-->
-    <!--<ul>-->
-    <!--<li>aaa</li>-->
-    <!--<li>bbb</li>-->
-    <!--<li>ccc</li>-->
-    <!--<li>ddd</li>-->
-    <!--</ul>-->
-    <!--</li>-->
-    <!--</ul>-->
+<input id="searchProductType">
+<button id="searchProductTypeBtn">定位</button>
+<div id="productTypeDiv">
 
 </div>
 </body>
 <script src="jquery-1.6.2.min.js"></script>
 <script>
-
     $(function () {
-
-        var hrtml = createContent('-1', json);
-        $("#content").html(hrtml);
-        function createContent(parentids, json) {
-            var ht = '<ul>';
-            for (var i = 0; i < json.length; i++) {
-                var obj = json[i];
-                if (obj.parentids == parentids) {
-                    ht += '<li>' + obj.name;
-                    if (obj.parentids == -1) {
-                        ht += createContent(obj.id, json);
-                    } else {
-                        ht += createContent(obj.parentids + "," + obj.id, json);
-                    }
-                    ht += '</li>';
-                }
+        var html = createContent('-1', data);
+        $("#productTypeDiv").append(html);
+        $("#productTypeDiv").data('isEdit', false);
+        $("#productTypeDiv li").each(function () {
+            if ($("#" + this.id + " ~ li").length == 0) {
+                $(this).css("background-color", "white");
             }
-
-            ht += '</ul>';
-            return ht;
-
-        }
-    });
-
-    var json = [{
-        id: 0,
-        name: '全部产品',
-        parentids: '-1',
-        order: '2010'
-    }, {
-        id: 1,
-        name: '未分类',
-        parentids: '0',
-        order: '2011'
-    }, {
-        id: 2,
-        name: '秤',
-        parentids: '0',
-        order: '2012'
-    }, {
-        id: 2,
-        name: '手提秤',
-        parentids: '0,2',
-        order: '2013'
-    }, {
-        id: 3,
-        name: '厨房秤',
-        parentids: '0,2',
-        order: '2014'
-    }, {
-        id: 4,
-        name: '体重秤',
-        parentids: '0,2',
-        order: '2014'
-    }, {
-        id: 5,
-        name: '衣服',
-        parentids: '0',
-        order: '2015'
-    }, {
-        id: 6,
-        name: '上衣',
-        parentids: '0,5',
-        order: '2016'
-    }, {
-        id: 7,
-        name: '针织衫',
-        parentids: '0,5,6',
-        order: '2017'
-    }, {
-        id: 8,
-        name: 'T血',
-        parentids: '0,5,6',
-        order: '2018'
-    }, {
-        id: 9,
-        name: '内衣',
-        parentids: '0,5,6',
-        order: '2019'
-    }, {
-        id: 10,
-        name: '球衣',
-        parentids: '0,5,6,9',
-        order: '2020'
-    }, {
-        id: 11,
-        name: '背心',
-        parentids: '0,5,6,9rrrrrrrrrrrrrrrrrrr',
-        order: '2021'
-    }, {
-        id: 12,
-        name: '裤子',
-        parentids: '0,5',
-        order: '2020'
-    }, {
-        id: 13,
-        name: '鞋子',
-        parentids: '0,5',
-        order: '2021'
-    }, {
-        id: 14,
-        name: '软件',
-        parentids: '0',
-        order: '2022'
-    }];
-/*
-    $(function() {
-        $.post(contextPath + "/product_ajaxGetProductTypeJsonList.yk",function(data){
-            data = $.parseJSON(data);
-            var html = createContent('-1', data);
-            $("#productTypeDiv").append(html);
+            if ($(this).find('li').length == 0) {
+                $(this).find('em').remove();
+            }
         });
+        $("#productTypeDiv em").each(function () {
+            $(this).click(function () {
+                if ($(this).hasClass('off')) {
+                    $(this).removeClass('off');
+                    $(this).siblings('ul').hide();
+                } else {
+                    $(this).addClass('off');
+                    $(this).siblings('ul').show();
+                }
+            });
+        });
+        var sptbClickCount = 0;
+        $('#searchProductType').keyup(function(e){
+            if(e.keyCode==13){
+                $("#searchProductTypeBtn").click();
+            }
+        });
+        $("#searchProductTypeBtn").click(function () {
+            var sval = $.trim($("#searchProductType").val());
+            if (sval == '')return;
+            var oldValue = $('#searchProductType').data('oldValue');
+            if (sval == oldValue) {
+                sptbClickCount++;
+            } else {
+                sptbClickCount = 1;
+                $('#searchProductType').data('oldValue', sval);
+            }
+
+            var eqindex = 0;
+            var eqlength = $('a[data="' + sval + '"]').length
+            $("#productTypeDiv a").each(function () {
+                if ($(this).text() == sval) {
+                    eqindex++;
+                    if (sptbClickCount % eqlength == eqindex % eqlength) {
+                        $(this).click();
+                        var pids = $(this).attr('parentids').split(',');
+
+                        for (var i = 0; i < pids.length; i++) {
+                            if(pids[i]!=''){
+                                $("#li_"+pids[i]).parent().show();
+                                $("#li_"+pids[i]+" > em").addClass('off');
+
+                            }
+                        }
+                        $(this).parent().parent().show();
+                    }
+                }
+            });
+        });
+
+
         function createContent(parentids, json) {
-            var ht = $('
-                    <ul>');
-            if (parentids.split(",").length>1) {
-                ht.hide();
+            var ht = $('<ul>');
+            if (parentids.split(",").length > 1) {
+                // ht.hide();
             }
             for (var i = 0; i < json.length; i++) {
                 var obj = json[i];
                 if (obj.parentids == parentids) {
-                    var li = $('
-                            <li>'+obj.name+'</li>
-                            ')
+                    var li = $('<li id="li_' + obj.ID + '"></li>');
+                    var name = $('<a data="' + obj.name + '" parentids="' + obj.parentids + '" id="a_' + obj.ID + '">' + obj.name + '</a>');
+                    name.click(function () {
+                        if ($("#productTypeDiv").data('isEdit')) {
+
+                        } else {
+                            $("#productTypeDiv a").css('background-color', 'white');
+                            $(this).css('background-color', '#ADD6ED');
+
+                        }
+                    });
+                    var em = $('<em id="em_' + obj.ID + '" class="off"></em>');
+                    var newName = $('<input type="text" value="' + obj.name + '" >');
+                    li.append(em).append(name);
                     ht.append(li);
                     if (obj.parentids == -1) {
-                        li.append( createContent(obj.ID, json));
+                        li.append(createContent(obj.ID, json));
                     } else {
                         li.append(createContent(obj.parentids + "," + obj.ID, json));
                     }
@@ -160,7 +146,145 @@
             return ht;
         }
     });
-*/
+
+
+    var data = [{
+        ID: '0',
+        name: '全部产品',
+        parentids: '-1',
+        order: '2010'
+    }, {
+        ID: '1',
+        name: '未分类',
+        parentids: '0',
+        order: '2011'
+    }, {
+        ID: '2',
+        name: '秤',
+        parentids: '0',
+        order: '2012'
+    }, {
+        ID: '16',
+        name: '手提秤',
+        parentids: '0,2',
+        order: '2013'
+    }, {
+        ID: '3',
+        name: '未分类',
+        parentids: '0,2',
+        order: '2014'
+    }, {
+        ID: '4',
+        name: '体重秤',
+        parentids: '0,2',
+        order: '2014'
+    }, {
+        ID: '5',
+        name: '衣服',
+        parentids: '0',
+        order: '2015'
+    }, {
+        ID: '6',
+        name: '上衣',
+        parentids: '0,5',
+        order: '2016'
+    }, {
+        ID: '7',
+        name: '针织衫',
+        parentids: '0,5,6',
+        order: '2017'
+    }, {
+        ID: '8',
+        name: 'T血',
+        parentids: '0,5,6',
+        order: '2018'
+    }, {
+        ID: '9',
+        name: '内衣',
+        parentids: '0,5,6',
+        order: '2019'
+    }, {
+        ID: '10',
+        name: '未分类',
+        parentids: '0,5,6,9',
+        order: '2020'
+    }, {
+        ID: '11',
+        name: '背心',
+        parentids: '0,5,6,9rrrrrrrrrrrrrrrrrrr',
+        order: '2021'
+    }, {
+        ID: '12',
+        name: '裤子',
+        parentids: '0,5',
+        order: '2020'
+    }, {
+        ID: '13',
+        name: '鞋子',
+        parentids: '0,5',
+        order: '2021'
+    }, {
+        ID: '14',
+        name: '软件',
+        parentids: '0',
+        order: '2022'
+    }];
+    /*
+     $(function() {
+     $.post(contextPath + "/product_ajaxGetProductTypeJsonList.yk",function(data){
+     data = $.parseJSON(data);
+     var html = createContent('-1', data);
+     $("#productTypeDiv").append(html);
+     });
+     function createContent(parentids, json) {
+     var ht = $('
+     <ul>');
+     if (parentids.split(",").length>1) {
+     ht.hide();
+     }
+     for (var i = 0; i < json.length; i++) {
+     var obj = json[i];
+     if (obj.parentids == parentids) {
+     var li = $('
+     <li>'+obj.name+'</li>
+     ')
+     ht.append(li);
+     if (obj.parentids == -1) {
+     li.append( createContent(obj.ID, json));
+     } else {
+     li.append(createContent(obj.parentids + "," + obj.ID, json));
+     }
+     }
+     }
+     return ht;
+     }
+     });
+     */
+
+    $(function () {
+
+//        var hrtml = createContent('-1', json);
+//        $("#content").html(hrtml);
+//        function createContent(parentids, json) {
+//            var ht = '<ul>';
+//            for (var i = 0; i < json.length; i++) {
+//                var obj = json[i];
+//                if (obj.parentids == parentids) {
+//                    ht += '<li>' + obj.name;
+//                    if (obj.parentids == -1) {
+//                        ht += createContent(obj.id, json);
+//                    } else {
+//                        ht += createContent(obj.parentids + "," + obj.id, json);
+//                    }
+//                    ht += '</li>';
+//                }
+//            }
+//
+//            ht += '</ul>';
+//            return ht;
+//
+//        }
+    });
 
 </script>
 </html>
