--- a/pro.html
+++ b/pro.html
@@ -50,7 +50,49 @@
 </body>
 <script src="jquery-1.6.2.min.js"></script>
 <script>
+    var productTypeOp={
+        aa:function(){
+            console.info('ccc');
+        }
+    }
     $(function () {
+        function createContent(parentids, json) {
+            var ht = $('<ul>');
+            if (parentids.split(",").length > 1) {
+                // ht.hide();
+            }
+            for (var i = 0; i < json.length; i++) {
+                var obj = json[i];
+                if (obj.parentids == parentids) {
+                    var li = $('<li id="li_' + obj.ID + '"></li>');
+                    var name = $('<a data="' + obj.name + '" parentids="' + obj.parentids + '" id="a_' + obj.ID + '">' + obj.name + '</a>');
+                    name.click(function () {
+                        if ($("#productTypeDiv").data('isEdit')) {
+
+                        } else {
+                            $("#productTypeDiv a").css('background-color', 'white');
+                            $(this).css('background-color', '#ADD6ED');
+
+                        }
+                    });
+                    var em = $('<em id="em_' + obj.ID + '" class="off"></em>');
+                    var newName = $('<input  type="text" name="cptList['+i+'].name" value="' + obj.name + '" >').hide();
+                    var oldName = $('<input type="hidden" name="cptList['+i+'].oldName" value="' + obj.name + '" >');
+                    var $id = $('<input type="hidden" name="cptList['+i+'].id" value="' + obj.ID + '" >');
+                    var $parentids = $('<input type="hidden" style="width:100px" name="cptList['+i+'].parentids" value="' + obj.parentids + '" >');
+                    var $addBtn = $('<input type="button" value="添加" onclick="productTypeOp.aa()">');
+                    li.append(em).append(name).append(oldName).append($id).append($parentids).append(newName).append($addBtn);
+                    ht.append(li);
+                    if (obj.parentids == -1) {
+                        li.append(createContent(obj.ID, json));
+                    } else {
+                        li.append(createContent(obj.parentids + "," + obj.ID, json));
+                    }
+                }
+            }
+            return ht;
+        }
+        //data = $.parseJSON(data);
         var html = createContent('-1', data);
         $("#productTypeDiv").append(html);
         $("#productTypeDiv").data('isEdit', false);
@@ -91,7 +133,7 @@
             }
 
             var eqindex = 0;
-            var eqlength = $('a[data="' + sval + '"]').length
+            var eqlength = $('#productTypeDiv a[data="' + sval + '"]').length;
             $("#productTypeDiv a").each(function () {
                 if ($(this).text() == sval) {
                     eqindex++;
@@ -111,40 +153,6 @@
                 }
             });
         });
-
-
-        function createContent(parentids, json) {
-            var ht = $('<ul>');
-            if (parentids.split(",").length > 1) {
-                // ht.hide();
-            }
-            for (var i = 0; i < json.length; i++) {
-                var obj = json[i];
-                if (obj.parentids == parentids) {
-                    var li = $('<li id="li_' + obj.ID + '"></li>');
-                    var name = $('<a data="' + obj.name + '" parentids="' + obj.parentids + '" id="a_' + obj.ID + '">' + obj.name + '</a>');
-                    name.click(function () {
-                        if ($("#productTypeDiv").data('isEdit')) {
-
-                        } else {
-                            $("#productTypeDiv a").css('background-color', 'white');
-                            $(this).css('background-color', '#ADD6ED');
-
-                        }
-                    });
-                    var em = $('<em id="em_' + obj.ID + '" class="off"></em>');
-                    var newName = $('<input type="text" value="' + obj.name + '" >');
-                    li.append(em).append(name);
-                    ht.append(li);
-                    if (obj.parentids == -1) {
-                        li.append(createContent(obj.ID, json));
-                    } else {
-                        li.append(createContent(obj.parentids + "," + obj.ID, json));
-                    }
-                }
-            }
-            return ht;
-        }
     });
 
 
