--- a/pro.html
+++ b/pro.html
@@ -297,4 +297,217 @@
 </script>
 </html>
 
-
+<script>
+//    $(function() {
+//        $.post(contextPath + "/product_ajaxGetProductTypeJsonList.yk", function(data) {
+//            data = eval('(' + data + ')');
+//            var html = createContent('-1', data);
+//            $("#productTypeDiv").append(html);
+//            $("#editProductType").data('isEdit', false);
+//            $("#productTypeDiv li").each(function() {
+//                if ($("#" + this.id + " ~ li").length == 0) {
+//                    $(this).css("background-color", "white");
+//                }
+//                if ($(this).find('li').length == 0) {
+//                    $(this).find('em').remove();
+//                }
+//            });
+//            $("#productTypeDiv em").each(function() {
+//                $(this).click(function() {
+//                    if ($(this).hasClass('off')) {
+//                        $(this).removeClass('off');
+//                        $(this).parent().siblings('ul').hide();
+//                    } else {
+//                        $(this).addClass('off');
+//                        $(this).parent().siblings('ul').show();
+//                    }
+//                });
+//            });
+//            $("#editProductType").click(function() {
+//                if ($("#editProductType").data('isEdit')) {// 是编辑的时候点击就保存
+//                    hideVisibleBtn();
+//                    // TODO ajax重新加载
+//                    $("#editProductType").data('isEdit', false);
+//                    $("#editProductType").val('编辑分类');
+//                } else {// 不是编辑的时候点击变成编辑状态
+//                    $("#editProductType").data('isEdit', true);
+//                    $("#editProductType").val('编辑完成');
+//                }
+//            });
+//            var sptbClickCount = 0;
+//            $('#searchProductType').keyup(function(e) {
+//                if (e.keyCode == 13) {
+//                    $("#searchProductTypeBtn").click();
+//                }
+//            });
+//            $("#searchProductTypeBtn").click(function() {
+//                var sval = $.trim($("#searchProductType").val());
+//                if (sval == '')
+//                    return;
+//                var oldValue = $('#searchProductType').data('oldValue');
+//                if (sval == oldValue) {
+//                    sptbClickCount++;
+//                } else {
+//                    sptbClickCount = 1;
+//                    $('#searchProductType').data('oldValue', sval);
+//                }
+//                var eqindex = 0;
+//                var eqlength = $('#productTypeDiv a[data="' + sval + '"]').length;
+//                $("#productTypeDiv a").each(function() {
+//                    if ($(this).text() == sval) {
+//                        eqindex++;
+//                        if (sptbClickCount % eqlength == eqindex % eqlength) {
+//                            $(this).click();
+//                            var pids = $(this).attr('parentids').split(',');
+//                            for (var i = 0; i < pids.length; i++) {
+//                                if (pids[i] != '') {
+//                                    $("#li_" + pids[i]).parent().show();
+//                                    $("#li_" + pids[i] + " > em").addClass('off');
+//                                }
+//                            }
+//                            $(this).parent().parent().show();
+//                        }
+//                    }
+//                });
+//            });
+//        });
+//
+//        $('body').append('<div id="dialog-form-newProductType" style="display:none;">'
+//                + getDialogTitle('添加分类',"dialog-form-newProductType",60)
+//                +'<SPAN class="validateTips" style="color:red"></SPAN>'
+//                +'<div style="margin-top:0px;">'
+//                +'<div id="clickLoding" style="display: none;position: absolute;left: 150px;top: 90px;"><img src="common/skin/images/loading.gif" alt="loading..."></div>'
+//                +'<form id="createProductTypeForm" action="product_ajaxSaveProductType.yk" method="post" >'
+//                +'<table style="WORD-BREAK: break-all; WORD-WRAP: break-word">'
+//                +'<tbody>'
+//                +'<tr height="30px;">'
+//                +'<td colspan="2" style="text-align: center;">'
+//                +'<input type="radio" name="productTypeDir" value="0" style="top: 3px; position: relative;" id="sibProductType">同级分类'
+//                +'<input type="radio" name="productTypeDir" checked="checked" value="1" style="margin-left: 14px;top: 3px;position: relative;" id="chiProductType">子级分类'
+//                +'</td>'
+//                +'</tr>'
+//                +'<tr height="30px;">'
+//                +'<td colspan="2" align="right" style="text-align: center;">'
+//                +'<span>分类名称</span>&nbsp;&nbsp;'
+//                +'<input type="text" name="productTypeName" id="productTypeName" value="" maxlength="50" size="30" style="width:160px;"></td>'
+//                +'<input type="hidden" name="prodcutTypeSelectID" id="prodcutTypeSelectID"/>'
+//                +'</tr>'
+//                +'<tr>'
+//                +'<td colspan="3" align="right">'
+//                +'<input id="createInfo" class="btn_save" type="button" value="保存" onclick="productTypeOp.save()">'
+//                +'<input class="btn_cancel" type="button" value="取消" onclick="closeDialog(\'dialog-form-newProductType\');">'
+//                +'</td>'
+//                +'</tr>'
+//                +'</tbody>'
+//                +'</table>'
+//                +'</form>'
+//                +'</div></div>');
+//
+//        $("#dialog-form-newProductType").dialog( {
+//            autoOpen : false,
+//            height : 'auto',
+//            width : 400,
+//            modal : true,
+//            show : "drop",
+//            hide : "drop",
+//            closeOnEscape: false,
+//            resizable : false,
+//            open : function(){
+//            }
+//        });
+//
+//        function hideVisibleBtn() {
+//            $("#productTypeDiv input[id^='addbtn_']:visible").hide();
+//            $("#productTypeDiv input[id^='delbtn_']:visible").hide();
+//        }
+//        function createContent(parentids, json) {
+//            var ht = $('<ul>');
+//            if (parentids.split(",").length > 1) {
+//                // ht.hide();
+//            }
+//            for (var i = 0; i < json.length; i++) {
+//                var obj = json[i];
+//                if(obj.order==0){
+//                    productTypeOp.allsort = obj.name;
+//                }else if(obj.order==1){
+//                    productTypeOp.unsort = obj.name;
+//                }
+//                if (obj.parentids == parentids) {
+//                    var li = $('<li id="li_' + obj.ID + '" ></li>');
+//                    var name = $('<a data="' + obj.name + '" parentids="' + obj.parentids + '" id="a_' + obj.ID + '">' + obj.name + '</a>');
+//                    var em = $('<em id="em_' + obj.ID + '" class="off"></em>');
+//                    var newName = $('<input  type="text" id="newname_' + obj.ID + '" name="cptList[' + i + '].name" value="' + obj.name + '" >').hide();
+//                    var oldName = $('<input type="hidden" name="cptList[' + i + '].oldName" value="' + obj.name + '" >');
+//                    var $id = $('<input type="hidden" name="cptList[' + i + '].id" value="' + obj.ID + '" >');
+//                    var $parentids = $('<input type="hidden" style="width:100px" name="cptList[' + i + '].parentids" value="' + obj.parentids + '" >');
+//                    var $addBtn = $('<input type="button" style="display:none" value="添加" id="addbtn_' + obj.ID + '" onclick="productTypeOp.add(\'' + obj.ID + '\',\'' + obj.parentids + '\')">');
+//                    var $delBtn = $('<input type="button" style="display:none" value="删除" id="delbtn_' + obj.ID + '" onclick="productTypeOp.del(\'' + obj.ID + '\')">');
+//                    if (obj.order == 1 || obj.order == 0) {
+//                        $delBtn.attr('disabled', 'disabled');
+//                    }
+//                    name.click(function() {
+//                        if ($("#editProductType").data('isEdit')) {
+//                            var id = this.id.split("_")[1];
+//                            hideVisibleBtn();
+//                            $("#newname_" + id + ",#addbtn_" + id + ",#delbtn_" + id).show();
+//                            $("#newname_" + id).focus();
+//                            $(this).hide();
+//                        } else {
+//                            $("#productTypeDiv a").css('background-color', 'white');
+//                            $(this).css('background-color', '#ADD6ED');
+//                        }
+//                    });
+//                    newName.blur(function() {
+//                        var id = this.id.split("_")[1];
+//                        $("#a_" + id).text($(this).val()).show();
+//                        $(this).hide();
+//                    });
+//                    li.append($('<div style="display:inline-flex">').append(em).append(name).append(oldName).append($id).append($parentids).append(newName).append($addBtn).append($delBtn));
+//                    ht.append(li);
+//                    if (obj.parentids == -1) {
+//                        li.append(createContent(obj.ID, json));
+//                    } else {
+//                        li.append(createContent(obj.parentids + "," + obj.ID, json));
+//                    }
+//                }
+//            }
+//            return ht;
+//        }
+//    });
+//
+//    var productTypeOp = {
+//        allsort : "",
+//        unsort : "",
+//        add : function(id,pid) {
+//            $("#sibProductType,#chiProductType").removeAttr('disabled');
+//            if (id==(tenantID_server+"-0")) {
+//                $("#sibProductType").attr('disabled','disabled');
+//                $("#chiProductType").attr('checked','checked');
+//            }else if(id==(tenantID_server+"-1")){
+//                $("#sibProductType").attr('checked','checked');
+//                $("#chiProductType").attr('disabled','disabled');
+//            }else{
+//                $("#chiProductType").attr('checked','checked');
+//            }
+//            $("#productTypeName").val('');
+//            $("#prodcutTypeSelectID").val(id);
+//            $("#dialog-form-newProductType").dialog("open");
+//
+//        },
+//        save:function(){
+//            $('#createProductTypeForm').ajaxForm(function(data){
+//                console.info(data);
+//            });
+//        },
+//        del : function(id) {
+//            jConfirm('删除分类后，分类下产品将会被移至“'+productTypeOp.unsort+'”下。\r\n确定删除吗？', '提示框', function(flag) {
+//                if (flag) {
+//                    $.post(contextPath + "/product_ajaxDeleteProductType.yk?id="+id, function(data) {
+//
+//                    });
+//                }
+//            });
+//        }
+//    }
+//
+</script>
